Quiniela games wtf

--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -1,7 +1,7 @@
 
 	<div class="container clearfix">
 		{{> header}}
-		<div id="detailQuiniela" class="content quiniela_single clearfix">
+		<div id="detailQuiniela" data-id="{{data.id}}" class="content quiniela_single clearfix">
 			<div class="registro_quiniela clearfix">
 				<a class="hook" data-resource="lobby" href="lobby.html"><img src="{{cordova_full_path}}images/cierre.png"></a>
 				<a id="reg_into_game"><img src="{{cordova_full_path}}images/registrarse.png"></a>
