--- a/www/views/partials/quiniela-games.hbs
+++ b/www/views/partials/quiniela-games.hbs
@@ -3,7 +3,8 @@
 		<span>LOCAL</span> <span>EMPATE</span> <span>VISITA</span>
 	</div><!-- opciones_partido -->
 	{{# data.fixtures}}
-		<div class="partido clearfix">
+		fizruer
+		<div data-id="{{id}}" class="partido clearfix">
 			<div class="opcion_partido local clearfix">
 				<input type="radio" name="ganador_uno" id="local">
 				<img src="{{cordova_full_path}}images/camisaverde.png">
