Final merge html stylesheet and images

--- a/www/views/partials/header.hbs
+++ b/www/views/partials/header.hbs
@@ -15,7 +15,7 @@
 						{{/ me.avatar}}
 						{{# me.avatar}}
 							<div class="avatar_container">
-								<img src="http://pickwin.astrata.mx/img/avatars/{{../me.avatar}}">
+								<img src="{{../me.avatar_dir}}{{../me.avatar}}">
 							</div>
 						{{/ me.avatar}}
 						<h2>{{me.nick}}</h2>
