--- a/www/css/style.css
+++ b/www/css/style.css
@@ -621,3 +621,4 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.registro .form { margin-bottom: 2.8rem;}
 
 	.login .form p {font-size: 14px; color: #d8d8d8; margin-bottom: 1.5rem;}
+	.menu ul li.menu_perfil>a{}
