--- a/www/views/container.hbs
+++ b/www/views/container.hbs
@@ -1,4 +1,5 @@
-	<section class="view {{# unless data.is_scrollable }}full_noscroll{{/ unless}}">
+
+	<section class="view">
 		
 	</section>
 	{{> loader}}
