--- a/www/views/partials/filters.hbs
+++ b/www/views/partials/filters.hbs
@@ -36,7 +36,7 @@
 					<li data="soccer_copamx"><span>Copa MX</span></li>
 					<li data="soccer_laliga"><span>La Liga</span></li>
 					<li data="soccer_premier"><span>Premier</span></li>
-					<li class="selected" data="soccer_champions"><span>Champions</span></li>
+					<li data="soccer_champions"><span>Champions</span></li>
 				</ul>
 			</div><!-- filtros_deporte -->
 			<div class="filtros_tipo clearfix">
