--- a/www/css/style.css
+++ b/www/css/style.css
@@ -497,7 +497,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*** PROFILE ***/
 
-.profile {width: 100%; padding-top: 100px; font-size: 10px;}
+.profile {width: 100%; padding-top: 100px; font-size: 10px;  padding-bottom: 10%;}
 .tabs_quiniela {width: 100%; background: #000; margin-top: 20px; margin-bottom: 10px; border-radius: 3px; border: 1px solid #414042; }
 .tabs_quiniela ul {list-style: none; margin: 0; padding: 0px;}
 .tabs_quiniela ul li {display: block; width: 100px; display: table-cell; white-space: nowrap; text-align: center; border-right: 1px solid #414042; height: 22px; padding: 10px 0;}
@@ -518,7 +518,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .profile .agregartarjeta {width: 100%; background: #000; margin-top: 10px;}
 .profile .agregartarjeta h3 {width: 100%; font-weight: normal; padding: 10px 0; text-align: center; border-top: 1px solid #77BC1F; margin-top: 0px;}
-.profile .agregartarjeta form {width: 100%; padding: 5px; background: #000; padding-bottom: 20%;}
+.profile .agregartarjeta form {width: 100%; padding: 5px; background: #000;}
 .profile .agregartarjeta form p {text-align: center; columns: #fff; font-size: 10px; margin-bottom: 20px; padding: 0 10%; line-height: 15px;}
 .profile .agregartarjeta form input[type="text"] {width: 100%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
 .profile .agregartarjeta form input::placeholder {color: #fff;}
@@ -526,6 +526,9 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .profile .agregartarjeta form input[type="submit"] {width: 92px; height: 36px; background: url('../images/guardar.png') no-repeat; border: none!important; text-indent: -100000px; text-align: center;}
 .profile .agregartarjeta form .fecha_vencimiento select {width: 20%; float: left; margin-right: 10px; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
 .profile .agregartarjeta form .fecha_vencimiento input[type="text"] {width: 30%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
+.profile .legales {width: 100%; margin-top: 5%; text-align: center;}
+.profile .legales a.link_legal {font-size: 14px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
+
 
 /*** ABONAR ***/
 
