--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -498,7 +498,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*** PROFILE ***/
 
-.profile {width: 100%; padding-top: 100px; font-size: 10px;}
+.profile {width: 100%; padding-top: 100px; font-size: 10px; padding-bottom: 10%;}
 .tabs_quiniela {width: 100%; background: #000; margin-top: 20px; margin-bottom: 10px; border-radius: 3px; border: 1px solid #414042; }
 .tabs_quiniela ul {list-style: none; margin: 0; padding: 0px;}
 .tabs_quiniela ul li {display: block; width: 100px; display: table-cell; white-space: nowrap; text-align: center; border-right: 1px solid #414042; height: 22px; padding: 10px 0;}
@@ -509,17 +509,22 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 .profile .tab_profile {width: 100%; background: #000; padding: 10px; text-align: center;}
 .profile .tab_profile ul {margin: 20px 0 20px 0; padding: 0px; list-style: none;}
-.profile .tab_profile ul li {display: block; margin-bottom: 10px; width: 100%;}
+.profile .tab_profile ul li {display: block; margin-bottom: 10px; width: 100%; position: relative;}
 .profile .tab_profile ul li input {float: left; margin-right: 10px;}
-.profile .tab_profile ul li img {float: left;}
+.profile .tab_profile ul li img {float: left; margin-left: 35px; z-index: -100;}
 .profile .tab_profile ul li span.terminacion {font-size: 12px; display: block; padding: 10px; float: left; }
 .profile .tab_profile ul li .edit_tarjeta {float: right;}
 .profile .tab_profile ul li .edit_tarjeta img {float: left; margin-left: 10px;}
 .profile .tab_profile .agregar_tarjeta {text-align: center;}
+.profile .tab_profile ul li .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 0px; left: 0px; z-index: 100; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.profile .tab_profile ul li .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 15px; width: 15px; top: 5px; left: 5px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
+.profile .tab_profile ul li input[type=radio] {position: absolute;visibility: hidden;}
+.profile .tab_profile ul li input[type=radio]:checked ~ .check { border: 5px solid #0DFF92;}
+.profile .tab_profile ul li input[type=radio]:checked ~ .check::before{ background: #0DFF92;}
 
-.profile .agregartarjeta {width: 100%; background: #000; margin-top: 10px;}
+.profile .agregartarjeta {width: 100%; background: #000; margin-top: 10px; }
 .profile .agregartarjeta h3 {width: 100%; font-weight: normal; padding: 10px 0; text-align: center; border-top: 1px solid #77BC1F; margin-top: 0px;}
-.profile .agregartarjeta form {width: 100%; padding: 5px; background: #000; padding-bottom: 20%;}
+.profile .agregartarjeta form {width: 100%; padding: 5px; background: #000; }
 .profile .agregartarjeta form p {text-align: center; columns: #fff; font-size: 10px; margin-bottom: 20px; padding: 0 10%; line-height: 15px;}
 .profile .agregartarjeta form input[type="text"] {width: 100%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
 .profile .agregartarjeta form input::placeholder {color: #fff;}
@@ -527,6 +532,10 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .profile .agregartarjeta form input[type="submit"] {width: 92px; height: 36px; background: url('images/guardar.png') no-repeat; border: none!important; text-indent: -100000px; text-align: center;}
 .profile .agregartarjeta form .fecha_vencimiento select {width: 20%; float: left; margin-right: 10px; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
 .profile .agregartarjeta form .fecha_vencimiento input[type="text"] {width: 30%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
+
+.profile .legales {width: 100%; margin-top: 5%; text-align: center;}
+.profile .legales a.link_legal {font-size: 14px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
+
 
 /*** ABONAR ***/
 
