--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -73,7 +73,10 @@
 					</div>
 				</form>
 			</div>
-			
+			<div class="legales clearfix">
+				<a class="link_legal" onclick="window.open('https://www.pickwin.net/terminos-y-condiciones', '_blank', 'location=yes')" >Términos y condiciones | </a>
+				<a class="link_legal" onclick="window.open('https://www.pickwin.net/aviso-de-privacidad', '_blank', 'location=yes')" >Política de privacidad</a>
+			</div>
 		</div><!-- content -->
 		{{> footer}}
 	</div><!-- container -->
