--- a/www/css/style.css
+++ b/www/css/style.css
@@ -619,6 +619,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.green_button{ background-color: #678946; border-color: #aaca7d; border-style: groove; text-transform: uppercase; letter-spacing: 1.5px; font-size: 1.25rem; width: 240px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; color: #FFF; padding: 0.5rem 1rem; text-decoration: none; margin: 2.5rem auto 0 auto; display: block;}
 	form label.error{ color: #678946; text-align: left; float: none; display: block; font-size: 1.1rem; letter-spacing: 1px; margin: 0 0 1rem 0;}
 	
+	.view,
+	.content{ min-height: 100vh;}
 	.content h1{ font-size: 1.6rem; font-weight: 300; text-transform: uppercase; letter-spacing: 1px; margin: 1rem auto;}
 	.registro .fb_registry {width: 70%; margin-bottom: 0;}
 	.registro .form { margin-bottom: 2.8rem;}
