--- a/www/views/lobby.hbs
+++ b/www/views/lobby.hbs
@@ -1,5 +1,5 @@
 
-	<div class="container clearfix lobby">
+	<div id="lobbyContainer" class="container clearfix lobby">
 		<div class="content quinielas">
 
 			{{# data.pools}}
