--- a/www/css/style.css
+++ b/www/css/style.css
@@ -634,3 +634,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 	.exoskeleton{ display: block; min-height: 100vh; width: 100%; top: 0; }
 	.quiniela_header .quiniela_iconos img{ margin-right: 2.5px;}
+	
+	/* LOg out button */
+	.header .header_logout {width: 20%; float: right; text-align: center;}
+	.header .header_logout h4 {font-weight: 700; font-size: 12px; color: #8A8A8D; margin-bottom: 30%; margin-top: 5%;}
+	.header .header_logout img {width: 40%}
