Way better ux, logout tmp button and header partial rendering

--- a/www/views/exoskeleton.hbs
+++ b/www/views/exoskeleton.hbs
@@ -1,5 +1,7 @@
-	
-	{{> header}}
+		
+	<div id="loadHeader">
+		{{> header}}
+	</div><!-- Loadheader -->	
 	<section id="exoskeleton" class="exoskeleton">
 		
 	</section>
