--- a/www/css/style.css
+++ b/www/css/style.css
@@ -597,15 +597,15 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 	.loading {
 		width: 32px;
-	    height: 32px;
-	    position: relative;
-	    margin: 45vh auto;
-	    display: block;
-	    border-radius: 50%;
-	    border: 0.25rem solid rgb(70, 117, 39);
-	    border-top-color: white;
-	    -webkit-animation: spin 1s infinite linear;
-	    animation: spin 1s infinite linear;
+		height: 32px;
+		position: relative;
+		margin: 45vh auto;
+		display: block;
+		border-radius: 50%;
+		border: 0.25rem solid rgb(70, 117, 39);
+		border-top-color: white;
+		-webkit-animation: spin 1s infinite linear;
+		animation: spin 1s infinite linear;
 	}
 
 	/* John overrides */
@@ -639,3 +639,4 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.header .header_logout {width: 20%; float: right; text-align: center;}
 	.header .header_logout h4 {font-weight: 700; font-size: 12px; color: #8A8A8D; margin-bottom: 30%; margin-top: 5%;}
 	.header .header_logout img {width: 40%}
+	.header .header_right .header_user_info .user_info h2>a{color: #FFF!important; text-decoration: none!important;}
