--- a/www/views/partials/header.hbs
+++ b/www/views/partials/header.hbs
@@ -1,48 +1,47 @@
-	<div id="loadHeader">
-		<div id="theHeader" class="header clearfix">
-			<div class="header_left">
-				<a class="hook" data-resource="lobby" href="lobby.html">
-					<img src="{{cordova_full_path}}images/logo.png">
-				</a>
-			</div>
-			<div class="header_right clearfix">
-				<div class="header_user_info clearfix">
-					<div class="user_info clearfix hook" data-resource="profile" href="profile.html">
-						{{^ me.avatar}}
-							<div class="avatar_container">
-								<img src="{{cordova_full_path}}images/profile_placeholder.png">
-							</div>
-						{{/ me.avatar}}
-						{{# me.avatar}}
-							<div class="avatar_container">
-								<img src="{{../me.avatar_dir}}{{../me.avatar}}">
-							</div>
-						{{/ me.avatar}}
-						<h2>{{me.nick}}</h2>
-					</div>
-					<div class="user_money clearfix">
-						<div class="money_pesos clearfix">
-							<img src="{{cordova_full_path}}images/billete.png">
-							<span class="money_ammount">${{ formatCurrency me.balanceReal}}</span>
+
+	<div id="theHeader" class="header clearfix">
+		<div class="header_left">
+			<a class="hook" data-resource="lobby" href="lobby.html">
+				<img src="{{cordova_full_path}}images/logo.png">
+			</a>
+		</div>
+		<div class="header_right clearfix">
+			<div class="header_user_info clearfix">
+				<div class="user_info clearfix hook">
+					{{^ me.avatar}}
+						<div class="avatar_container">
+							<img src="{{cordova_full_path}}images/profile_placeholder.png">
 						</div>
-						<div class="money_pickcoins clearfix">
-							<img src="{{cordova_full_path}}images/pickcoin.png">
-							<span class="money_ammount">{{ formatCurrency me.balancePc}}</span>
+					{{/ me.avatar}}
+					{{# me.avatar}}
+						<div class="avatar_container">
+							<img src="{{../me.avatar_dir}}{{../me.avatar}}">
 						</div>
+					{{/ me.avatar}}
+					<h2><a class="hook" data-resource="profile" href="profile.html">{{me.nick}}</a></h2>
+				</div>
+				<div class="user_money clearfix">
+					<div class="money_pesos clearfix">
+						<img src="{{cordova_full_path}}images/billete.png">
+						<span class="money_ammount">${{ formatCurrency me.balanceReal}}</span>
 					</div>
-				</div><!-- header_user_info -->
-				{{# selected_lobby}}
-					<div class="header_filtros" id="filterComponent">
-						<h4>FILTROS</h4>
-						<img src="{{cordova_full_path}}images/filtros.png">
+					<div class="money_pickcoins clearfix">
+						<img src="{{cordova_full_path}}images/pickcoin.png">
+						<span class="money_ammount">{{ formatCurrency me.balancePc}}</span>
 					</div>
-				{{/ selected_lobby}}
-				{{# selected_profile}}
-					<div class="header_logout" id="logoutComponent">
-						<h4>Salir</h4>
-						<img src="{{cordova_full_path}}images/logout.png">
-					</div>
-				{{/ selected_profile}}
-			</div>
-		</div><!-- header -->
-	</div><!-- Loadheader -->
+				</div>
+			</div><!-- header_user_info -->
+			{{# selected_lobby}}
+				<div class="header_filtros" id="filterComponent">
+					<h4>FILTROS</h4>
+					<img src="{{cordova_full_path}}images/filtros.png">
+				</div>
+			{{/ selected_lobby}}
+			{{# selected_profile}}
+				<div class="header_logout" id="logoutComponent">
+					<h4>Salir</h4>
+					<img src="{{cordova_full_path}}images/error.png">
+				</div>
+			{{/ selected_profile}}
+		</div>
+	</div><!-- header -->
