--- a/www/views/partials/each-quiniela.hbs
+++ b/www/views/partials/each-quiniela.hbs
@@ -33,7 +33,7 @@
 						<span class="limite">Limitado a {{max_entries}} entradas</span>
 					{{/ limited_capacity}}
 					{{# if closed}}
-						<span class="limite">CERRADA</span>
+						<span class="limite">FINALIZÓ</span>
 					{{/ if}}
 					{{!-- <span class="aciertos">ACIERTOS: 3/15</span> --}}
 				</div><!-- quiniela_info -->
