--- a/www/views/private.hbs
+++ b/www/views/private.hbs
@@ -1,1 +1,17 @@
-<p>Quinielas privadas</p>
+	
+	<div class="content quiniela_privada_uno">
+		<div class="busqueda_quinielas clearfix">
+			<div class="botones clearfix">
+				<a class="selected" >Buscar</a>
+				<a href="private.html" class="hook" data-resource="privates-create">Crear quiniela privada</a>
+			</div>
+			<form id="busqueda_quinielas">
+				<input type="text" placeholder="Nombre de la quiniela">
+				<input type="text" placeholder="Código de la quiniela">
+				<div class="submit_holder">
+					<input type="submit" value="send">
+				</div>
+			</form>
+		</div>
+	</div><!-- content -->
+	
