--- a/www/css/style.css
+++ b/www/css/style.css
@@ -634,6 +634,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 	.exoskeleton{ display: block; min-height: 100vh; width: 100%; top: 0; }
 	.quiniela_header .quiniela_iconos img{ margin-right: 2.5px;}
+	.quiniela_single{}
 	
 	/* LOg out button */
 	.header .header_logout {width: 20%; float: right; text-align: center;}
